--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="light_gray">#B1B3B1</color>
     <color name="white">#FFFFFFFF</color>
     <color name="delete_red">#BF0000</color>
+    <color name="google_button">#F2F2F2</color>
 
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">@color/secundary_green_transparent</color>
 </resources>
