--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,19 @@
         <item name="boxStrokeColor">@color/primary_green</item>
     </style>
 
+    <style name="MyLoginTextStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorAccent">@color/primary_green</item>
+        <item name="prefixTextColor">@color/secondary_green</item>
+        <item name="hintTextColor">@color/primary_green</item>
+        <item name="placeholderTextColor">@color/primary_green</item>
+        <item name="boxStrokeColor">@color/primary_green</item>
+        <item name="boxCornerRadiusBottomEnd">12dp</item>
+        <item name="boxCornerRadiusBottomStart">12dp</item>
+        <item name="boxCornerRadiusTopStart">12dp</item>
+        <item name="boxCornerRadiusTopEnd">12dp</item>
+        <item name="startIconTint">@color/secondary_green</item>
+    </style>
+
     <style name="MyCancelButtonStyle" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textColor">@color/gray</item>
     </style>
