--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <color name="primary_green">#96AC60</color>
     <color name="secondary_green">#606D40</color>
+    <color name="_green">#2AA653</color>
     <color name="secundary_green_transparent">#4D606D40</color>
     <color name="black">#FF000000</color>
     <color name="dark_gray">#333333</color>
